# MR_ROBOT

./: .gitignore  CMakeLists.txt  run.sh
hello_robot-v0.8/: Makefile
hello_robot-v0.8/src/: main.c
hello_robot-v0.8/src/robot/: robot.c
infox_prose-x86_64-v0.3/: CMakeLists.txt
version_a_completer/: Makefile  conc_detaillee_archi_candidate.puml  conc_generale_archi_candidate.puml
version_a_completer/lib/: CMakeLists.txt  Makefile  util.h
version_a_completer/lib/include/: liste_chainee.h  logger.h  mailbox.h  pilot.h  remoteui.h  robocom.h  util.h
version_a_completer/lib/liste_chainee/: CMakeLists.txt  Makefile  liste_chainee.c
version_a_completer/lib/mailbox/: Makefile  mailbox.c
version_a_completer/lib/robocom/: CMakeLists.txt  Makefile  robocom.c  robocom.h
version_a_completer/lib/watchdog/: Makefile  watchdog.c
version_a_completer/src/: CMakeLists.txt  Makefile  main.c  main_client.c  main_server.c
version_a_completer/src/CommandoV3/: Makefile  adminui.c  adminui.h  commands_functions.c  commands_functions.h  dispatcher_server.c  dispatcher_server.h  ihm.c  ihm.h  logger.c  logger.h  messages.h  pilot.c  pilot.h  pilot_new.c  postmanCommando.c  postmanCommando.h  proxy_remoteUI.c  proxy_remoteUI.h  robot.c  robot.h  server.c  server.h
version_a_completer/src/TelcoV3/: Makefile  client.c  client.h  dispatcher_client.c  dispatcher_client.h  ihm.c  ihm.h  messages.h  postmanTelco.c  postmanTelco.h  proxy_logger.c  proxy_logger.h  proxy_pilot.c  proxy_pilot.h  proxy_pilote.c  proxy_pilote.h  remoteui.c  remoteui.h
version_a_completer/src/commando/: CMakeLists.txt  Makefile  commands_functions.c  main_server.c  pilot.c  pilot.h  robot.c  server.c  server.h
version_a_completer/src/example/: example.c  example.h
version_a_completer/src/lib/: CMakeLists.txt  robocom.c  robocom.h
version_a_completer/src/mrRobot/: adminui.c  adminui.h  pilot.c  pilot.h  robot.c  robot.h
version_a_completer/src/telco/: CMakeLists.txt  Makefile  client.c  client.h  main_client.c  remoteui.c  remoteui.h
